--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,8 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -18,5 +17,87 @@ a {
 }
 
 body {
-  background-color: #88effd;
+  position: relative;
+  width: 1440px;
+  height: 1024px;
+
+  background: #d9d9d9;
+}
+.button4 {
+  box-sizing: border-box;
+
+  position: absolute;
+  width: 493px;
+  height: 56px;
+  left: 444px;
+  top: 484px;
+
+  background: #611818;
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.button3 {
+  box-sizing: border-box;
+
+  position: absolute;
+  width: 493px;
+  height: 56px;
+  left: 444px;
+  top: 408px;
+
+  background: #611818;
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.button {
+  box-sizing: border-box;
+
+  position: absolute;
+  width: 493px;
+  height: 56px;
+  left: 444px;
+  top: 560px;
+
+  background: #611818;
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.button2 {
+  box-sizing: border-box;
+
+  position: absolute;
+  width: 493px;
+  height: 56px;
+  left: 444px;
+  top: 636px;
+
+  background: #611818;
+  border: 1px solid #000000;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.toot {
+  position: absolute;
+  width: 208px;
+  height: 208px;
+  left: 598px;
+  top: 58px;
+
+  background: src= 'toot1.jpg';
+ }
+
+.toot2 {
+  position: absolute;
+  width: 212px;
+  height: 24px;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 24px;
+
+  color: #111010;
 }
