--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,9 +17,10 @@ a {
 }
 
 body {
-  position: relative;
-  width: 1440px;
-  height: 1024px;
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   background: #d9d9d9;
 }
@@ -79,7 +80,7 @@ body {
 }
 
 .toot {
-  position: absolute;
+  /* position: topCenter */
   width: 208px;
   height: 208px;
   left: 598px;
@@ -100,4 +101,12 @@ body {
   line-height: 24px;
 
   color: #111010;
+}
+
+.tripTable {
+  position: relative;
+width: 1240px;
+height: 637px;
+
+background: #FFFFFF;
 }
